--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Rename to .env
 
-DATABASE_URL="file:../src/database/db.sqlite"
+DATABASE_URL='mysql://kglqjuvxsdcno5wj3zi2:pscale_pw_V9pkdjnse28xkEAdTbbk8p7rRlsbRvQAjrD33rYS5VL@aws-sa-east-1.connect.psdb.cloud/db?sslaccept=strict'
